specify MIME type

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <h1 id="unsupported-screen-size-message">Screen size below 375px width is not supported</h1>
 </div>
 
-<input type="file" id="file-input" name="upload-file" accept="image/*">
+<input type="file" id="file-input" name="upload-file" accept="image/png, image/jpeg, image/gif">
 
 <template id="tag-template">
   <div class="tag">
