edit tag annotation
* `imageCache` and `tagsCache` can only be access from functions exported from the module
* edit existing tag annotation interaction
* if no input was given, default to `Untited tag ${numberOfLastUntitledTag + 1}`
* when hovered over, existing tags look like text input to suggest they can be edited
* clone only the tag element and not the document fragment

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <template id="tag-template">
   <div class="tag">
-    <span class="annotation"></span>
+    <div class="annotation"></div>
 
     <button class="delete-button text-button" type="button">Delete</button>
   </div>
